[gd_scene load_steps=12 format=3 uid="uid://tv706pi3cf28"]

[ext_resource type="Script" uid="uid://dp5qrrp13uyq" path="res://src/secenes/level/tiles/disolve_block.gd" id="1_8n7rp"]
[ext_resource type="Shader" uid="uid://b0wba1iwsluvd" path="res://assets/shaders/disolve.gdshader" id="1_a21au"]
[ext_resource type="Texture2D" uid="uid://riso1kxfjte0" path="res://assets/sprites/world/tile-types.png" id="3_8n7rp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_trxyg"]
resource_local_to_scene = true
shader = ExtResource("1_a21au")
shader_parameter/sensitivity = 0.0
shader_parameter/transparency = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8n7rp"]
atlas = ExtResource("3_8n7rp")
region = Rect2(0, 48, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1cpf4"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcslu"]

[sub_resource type="Animation" id="Animation_8n7rp"]
resource_name = "Disolve"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/sensitivity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1989237),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.70000005),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/AreaCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.70000005),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Timer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}

[sub_resource type="Animation" id="Animation_1cpf4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/sensitivity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/AreaCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pcslu"]
resource_name = "Repair"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/sensitivity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reset"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1cpf4"]
_data = {
&"Disolve": SubResource("Animation_8n7rp"),
&"RESET": SubResource("Animation_1cpf4"),
&"Repair": SubResource("Animation_pcslu")
}

[node name="DisolveBlock" type="StaticBody2D"]
script = ExtResource("1_8n7rp")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_trxyg")
texture = SubResource("AtlasTexture_8n7rp")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1cpf4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="AreaCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pcslu")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1cpf4")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
